# music-playlists

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
 .github/workflows/: codeql.yml  update-playlists.yml
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  release.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: code-analysis.yml  codeql.yml  docs.yml  labeler.yml  pypi-package.yml  test-package.yml  update-playlists.yml  zizmor.yml
data/: changes.yml  logging.yml  remove.txt
helper_package/: data_helper.py  music_source_doublej_most_played.py  music_source_triplej_most_played.py  music_source_triplej_unearthed_chart.py  stream_playlist_google_music.py  stream_playlist_spotify.py
music_playlists/: downloader.py  main.py  playlist_data.py  process.py  settings.py  track.py
music_playlists/abc_radio/: artist.py  artwork.py  link.py  manage.py  models.py  play.py  plays.py  recording.py  release.py  search.py  size.py  unearthed_artist.py  unearthed_image.py  unearthed_source_file.py  unearthed_track.py  unearthed_tracks_showcase.py
music_playlists/data/: track.py
music_playlists/last_fm/: artist.py  image.py  manage.py  models.py  streamable.py  track.py  track_attr.py
music_playlists/music_service/: google_music.py  service_playlist.py  spotify.py  spotify_client.py  youtube_music.py
music_playlists/music_source/: doublej_most_played.py  last_fm_most_popular.py  radio4zzz_most_played.py  sound_cloud_trending.py  source_playlist.py  triplej_most_played.py  triplej_unearthed_chart.py
music_playlists/radio_4zzz/: descriptors.py  episode.py  episode_summary.py  manage.py  models.py  program.py  program_summary.py  testing.py  track.py
music_playlists/report/: index.template.html
music_playlists/spotify/: album.py  artist.py  client.py  external_id.py  external_url.py  follower.py  image.py  manage.py  models.py  restriction.py  track.py  tracks.py
music_playlists/stream_playlist/: google_music.py  spotify.py
music_playlists/tests/: service_playlists.json  source_playlists.json  test_intermediate.py  test_music_service_spotify.py  test_music_service_youtube_music.py  test_music_source_last_fm_most_popular.py  test_music_source_radio4zzz_most_played.py  test_music_source_sound_cloud_trending.py  test_music_source_triplej_most_played.py  test_music_source_triplej_unearthed_chart.py  test_service_playlist.py
music_playlists/youtube_music/: album.py  artist.py  author.py  client.py  feedback.py  manage.py  models.py  playlist.py  thumbnail.py  track.py  tracks.py
src/music_playlists/: __about__.py  __init__.py  __main__.py  intermediate.py  model.py  process.py  settings.py  utils.py
src/music_playlists/cli/: __init__.py
src/music_playlists/services/: spotify.py  youtube_music.py
src/music_playlists/sources/: abc_radio.py  last_fm.py  radio_4zzz.py
tests/: test_cli.py  test_intermediate.py
tests/resources/: test.toml
triplej/: triplej_most_played.py  unearthed_chart.py
