[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "music-playlists"
description = "Generates streaming music playlists create from various song charts."
version = "0.2.0"
dynamic = ["readme", "dependencies", "optional-dependencies"]

[project.scripts]
music-playlists = "music_playlists.main:main"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = "requirements.txt" }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }
